@@ -32,6 +32,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [SERVICES] Use 'onestatus' to establish if a service is running
 - [SERVICES] [FILEBEAT] Improve how service and Filebeat processes' status are shown on GUI
 - [BOOTSTRAP] Ensure GeoLite and timezone DBs are fetched/generated when bootstrapping a node
+- [SERVICES] [FRONTEND] Unable to delete config files due to wrong mode filtering
 
 
 ## [2.22.3] - 2025-03-21
